  / <Jojo> Removed time stretcher's / pitch shifter's preview function as it's unnecessary now.
  . <Jojo> When going down close to 0 Hz in the sample editor, the sample freq wrapped around to the maximum value.
  . <Jojo> Insert Silence: Loop points were not updated when adding silence at the beginning of the sample

Instrument tab
  . <Jojo> When playing an instrument and disabling its envelopes at the same time, the toggled envelopes are stopped (prevents filter envelope from turning into a pitch envelope).
  . <re>   Sample map was broken when dealing with sample indexes greater than 255.
  . <Jojo> Update plugin list properly when cleaning up plugins while being on the instrument tab (possibly also improves instrument tab behaviour when working with multiple windows).

Instrument tab::Envelope editor
  + <Jojo> Envelopes can be edited using keyboard. Various keyboard shortcuts have been added to move and edit envelope points. This uses a common "drag and drop" node with mouse editing, so a point can first be clicked and the be moved with f.e. cursor keys.
  ^ <Jojo> When creating a new envelope, automatically enable it as well.
  ^ <Jojo> Mark currently selected envelope node yellow for better visibility when using keyboard editing.
  / <Jojo> Middle line is also shown for volume envelope.

Comments tab
  ^ <Jojo> If sample size is < 1 KB, amount of bytes is shown instead of "0 KB".
  . <Jojo> The lower part of the tab was receiving update messages that were not even meaningful to this tab (f.e. speed changes), so it was updating quite often modules that have alternating speed and the toolbar was "blinking"... Only letting in important update messages now.

Treeview
  + <Jojo> Show sequences in song treeview. Sequences can be inserted, duplicated and deleted by right-clicking the sequence items.
  + <Jojo> Clicking on a mod item (i.e. a filename node) switches to the corresponding window.