@@ -54,7 +54,7 @@
 				LinkIncremental="2"
 				SuppressStartupBanner="TRUE"
 				AdditionalLibraryDirectories=""
-				DelayLoadDLLs="OpenMPT_soundtouch_i16.dll"
+				DelayLoadDLLs="OpenMPT_SoundTouch_i16.dll"
 				GenerateDebugInformation="TRUE"
 				AssemblyDebug="1"
 				ProgramDatabaseFile=".\Debug/mptrack.pdb"
@@ -132,7 +132,7 @@
 				LinkIncremental="1"
 				SuppressStartupBanner="TRUE"
 				AdditionalLibraryDirectories=""
-				DelayLoadDLLs="OpenMPT_soundtouch_i16.dll"
+				DelayLoadDLLs="OpenMPT_SoundTouch_i16.dll"
 				GenerateDebugInformation="TRUE"
 				GenerateMapFile="FALSE"
 				MapFileName=".\Release/mptrack.map"
