@@ -8,6 +8,7 @@ version:1
 0:1347:2:78:1		//File/New: Ctrl+N (KeyDown)
 0:1346:2:79:1		//File/Open: Ctrl+O (KeyDown)
 0:1349:2:83:1		//File/Save: Ctrl+S (KeyDown)
+0:1350:3:83:1		//File/Save As: Shift+Ctrl+S (KeyDown)
 0:1030:0:116:1		//Play song/Pause song: F5 (KeyDown)
 0:1031:0:119:1		//Pause song: F8 (KeyDown)
 0:1375:0:27:1		//Stop Song: ESC (KeyDown)
@@ -21,6 +22,9 @@ version:1
 0:1361:2:45:1		//Copy: Ctrl+INSERT (KeyDown)
 0:1362:2:86:1		//Paste: Ctrl+V (KeyDown)
 0:1362:1:45:1		//Paste: Shift+INSERT (KeyDown)
+0:1363:1:86:1		//Mix Paste: Shift+V (KeyDown)
+0:1793:3:86:1		//Paste Flood: Shift+Ctrl+V (KeyDown)
+0:1820:6:86:1		//Push Forward Paste: Ctrl+Alt+V (KeyDown)
 0:1364:2:53:1		//SelectAll: Ctrl+5 (KeyDown)
 0:1365:2:70:1		//Find: Ctrl+F (KeyDown)
 0:1366:0:114:1		//Find Next: F3 (KeyDown)
@@ -31,6 +35,7 @@ version:1
 0:1025:1:120:1		//View Comments: Shift+F9 (KeyDown)
 0:1368:2:113:1		//Toggle Tree View: Ctrl+F2 (KeyDown)
 0:1369:2:112:1		//View Options: Ctrl+F1 (KeyDown)
+0:1781:2:114:1		//View MIDI mapping: Ctrl+F3 (KeyDown)
 0:1370:0:112:1		//Help (to do): F1 (KeyDown)
 0:1032:2:111:5		//Previous instrument: Ctrl+NUM DIVIDE (KeyDown|KeyHold)
 0:1032:2:38:5		//Previous instrument: Ctrl+UP (KeyDown|KeyHold)
@@ -76,8 +81,12 @@ version:1
 2:1685:2:9:1		//Switch to order list: Ctrl+TAB (KeyDown)
 2:1662:6:80:1		//Toggle channel's plugin editor: Ctrl+Alt+P (KeyDown)
 2:1062:0:93:1		//Show note properties: Application (KeyDown)
+2:1819:2:69:1		//Split Keyboard Settings dialog: Ctrl+E (KeyDown)
+2:1776:6:32:1		//Toggle loop pattern: Ctrl+Alt+SPACE (KeyDown)
+2:1780:2:84:1		//Show playback time at current row: Ctrl+T (KeyDown)
 2:1005:0:121:5		//Mute current channel: F10 (KeyDown|KeyHold)
 2:1006:2:121:5		//Solo current channel: Ctrl+F10 (KeyDown|KeyHold)
+2:1786:2:82:1		//Reset channel: Ctrl+R (KeyDown)
 2:1007:2:81:5		//Transpose +1: Ctrl+Q (KeyDown|KeyHold)
 2:1008:2:65:5		//Transpose -1: Ctrl+A (KeyDown|KeyHold)
 2:1009:3:81:5		//Transpose +12: Shift+Ctrl+Q (KeyDown|KeyHold)
@@ -159,6 +168,8 @@ version:1
 3:1316:1:16:1		//Chord Modifier: Shift (KeyDown)
 3:1200:0:192:1		//Note cut: ' (KeyDown)
 3:1201:0:187:1		//Note off: = (KeyDown)
+3:1788:1:226:1		//Parameter control(MPTm only): Shift+< (KeyDown)
+3:1789:0:226:1		//Parameter control(smooth)(MPTm only): < (KeyDown)
 
 //----( Pattern Context [bottom] - Ins Col (4) )------------
 4:1202:0:96:1		//Set instrument digit 0: NUM 0 (KeyDown)
@@ -219,7 +230,6 @@ version:1
 
 //----( Pattern Context [bottom] - FX Col (6) )------------
 6:1294:0:220:1		//FX midi macro slide: \ (KeyDown)
-6:1295:1:186:1		//FX pseudo-velocity (experimental): Shift+; (KeyDown)
 
 //----( Pattern Context [bottom] - Param Col (7) )------------
 7:1247:0:48:1		//FX Param digit 0: 0 (KeyDown)
@@ -252,13 +262,32 @@ version:1
 //----( Sample Context [bottom] (8) )------------
 8:1380:2:84:1		//Trim sample around loop points: Ctrl+T (KeyDown)
 8:1383:0:8:1		//Silence sample selection: BACKSPACE (KeyDown)
+8:1384:1:78:1		//Normalise Sample: Shift+N (KeyDown)
 8:1385:3:65:1		//Amplify Sample: Shift+Ctrl+A (KeyDown)
 8:1381:3:82:1		//Reverse sample: Shift+Ctrl+R (KeyDown)
 8:1382:0:46:1		//Delete sample selection: DELETE (KeyDown)
 8:1386:0:107:1		//Zoom Out: NUM PLUS (KeyDown)
 8:1387:0:109:1		//Zoom In: NUM SUB (KeyDown)
+8:1784:2:73:1		//Invert sample phase: Ctrl+I (KeyDown)
+8:1785:2:85:1		//Signed/Unsigned conversion: Ctrl+U (KeyDown)
+8:1790:2:68:1		//Remove DC Offset: Ctrl+D (KeyDown)
 
 //----( Instrument Context [bottom] (9) )------------
+9:1825:1:9:5		//Select previous envelope point: Shift+TAB (KeyDown|KeyHold)
+9:1826:0:9:5		//Select next envelope point: TAB (KeyDown|KeyHold)
+9:1821:0:37:5		//Move envelope point left: LEFT (KeyDown|KeyHold)
+9:1822:0:39:5		//Move envelope point right: RIGHT (KeyDown|KeyHold)
+9:1823:0:38:5		//Move envelope point up: UP (KeyDown|KeyHold)
+9:1834:0:33:5		//Move envelope point up (big step): PG UP (KeyDown|KeyHold)
+9:1824:0:40:5		//Move envelope point down: DOWN (KeyDown|KeyHold)
+9:1835:0:34:5		//Move envelope point down (big step): PG DN (KeyDown|KeyHold)
+9:1827:0:45:5		//Insert envelope point: INSERT (KeyDown|KeyHold)
+9:1828:0:46:5		//Remove envelope point: DELETE (KeyDown|KeyHold)
+9:1829:0:36:1		//Set loop start: HOME (KeyDown)
+9:1830:0:35:1		//Set loop end: END (KeyDown)
+9:1831:2:36:1		//Set sustain loop start: Ctrl+HOME (KeyDown)
+9:1832:2:35:1		//Set sustain loop end: Ctrl+END (KeyDown)
+9:1833:2:82:1		//Toggle release node: Ctrl+R (KeyDown)
 
 //----( Comments Context [bottom] (10) )------------
 
@@ -267,6 +296,11 @@ version:1
 //----( Unknown Context (12) )------------
 
 //----( Plugin GUI Context (13) )------------
+13:1763:2:109:5		//Previous plugin preset: Ctrl+NUM SUB (KeyDown|KeyHold)
+13:1764:2:107:5		//Next plugin preset: Ctrl+NUM PLUS (KeyDown|KeyHold)
+13:1782:0:109:5		//Plugin preset backward jump: NUM SUB (KeyDown|KeyHold)
+13:1783:0:107:5		//Plugin preset forward jump: NUM PLUS (KeyDown|KeyHold)
+13:1765:2:82:5		//Randomize plugin parameters: Ctrl+R (KeyDown|KeyHold)
 
 //----( General Context [top] (14) )------------
 
